Fix extra space

--- a/src/styles/misc/handle.scss
+++ b/src/styles/misc/handle.scss
@@ -8,7 +8,6 @@ $bg-color: #2a2a2a;
         -webkit-app-region: drag;
         background-color: $bg-color;
         color: #bbb;
-        grid-column: 1/4;
         display: grid;
         grid-template-columns: 1fr auto;
         justify-content: center;
