--- a/src/styles/misc/passcode.scss
+++ b/src/styles/misc/passcode.scss
@@ -1,10 +1,10 @@
 .passcode {
     > .box {
         & {
-            padding: 10px;
+            padding: 10px 11px;
             border: none;
-            border-radius: 3px;
-            background-color: #222;
+            border-radius: 5px;
+            background-color: #252525;
             color: #aaa;
             width: 30px;
             font-size: 25px;
