--- a/src/styles/pages/error.scss
+++ b/src/styles/pages/error.scss
@@ -71,7 +71,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-bottom: 80px;
+            margin-bottom: 40px;
             background-color: #383838;
             border-radius: 20px;
             padding: 8px 20px;
